Validação de tempo
Adicionei validação de tempo através do javaScript.

Coloquei um html para um teste de página

--- a/index.html
+++ b/index.html
@@ -29,23 +29,11 @@
     </section>
   
     <div class="container" id="chamadoContainer">
-      <div class="chamado verde">
-        <h2>Erro no login do sistema</h2>
-        <p>Usuário relata dificuldade ao acessar o sistema após atualização. Chamado aberto há 1 hora.</p>
-      </div>
-  
-      <div class="chamado amarelo">
-        <h2>Solicitação de novo EPI</h2>
-        <p>Funcionário pediu substituição de capacete vencido. Aguardando análise há 4 dias.</p>
-      </div>
-  
-      <div class="chamado vermelho">
-        <h2>Vazamento na tubulação da fábrica</h2>
-        <p>Relatado há 15 dias. Sem retorno. Risco de segurança envolvido. Urgência necessária.</p>
-      </div>
+      <!-- Os chamados serão inseridos aqui via JavaScript -->
     </div>
   
   </main>
   
   <script src="script.js"></script>
-  
+</body>
+</html>
