Adições de teste

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <textarea id="descricao" placeholder="Descrição" required></textarea>
         <select id="prioridade" required>
           <option value="">Selecione a prioridade</option>
-          <option value="verde">Recente</option>
-          <option value="amarelo">Intermediário</option>
-          <option value="vermelho">Antigo</option>
+          <option value="verde">Alta</option>
+          <option value="amarelo">Intermediária</option>
+          <option value="vermelho">Baixa</option>
         </select>
         <button type="submit">Adicionar</button>
       </form>
