--- a/Anderson/pages/cadastro.html
+++ b/Anderson/pages/cadastro.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style_cadastro.css">
     <title>Cadastre-se</title>
 </head>
 <body>
-    <input type="text" name="" id="" placeholder="Nome">
-    <input type="text" name="" id="" placeholder="Email">
-    <input type="text" name="" id="" placeholder="senha">
-    <input type="text" name="" id="" placeholder="confirmar senha">
+
+    <div class="container">
+
+        <div class="main_content">
+    
+            <input type="text" name="" class="inp_register" id="" placeholder="Nome">
+            <input type="text" name="" class="inp_register" id="" placeholder="Email">
+            <input type="text" name="" class="inp_register" id="" placeholder="Senha">
+            <input type="text" name="" class="inp_register" id="" placeholder="Confirmar senha">
+            <div>
+                <input type="radio" name="" id=""> Administrador
+                <input type="radio" name="" id=""> Técnico
+            </div>
+            <button class="btn_save" id="btn_save">Salvar</button>
+
+        </div>
+
+    </div>
     
     <input type="radio" name="" id="">Administrador
     <input type="radio" name="" id="">Técnico
