--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portal de Chamado</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/src/styles/style.css" />
 </head>
 <body>
   <header>
@@ -29,11 +29,11 @@
     </section>
   
     <div class="container" id="chamadoContainer">
-      <!-- Os chamados serão inseridos aqui via JavaScript -->
+     
     </div>
   
   </main>
   
-  <script src="script.js"></script>
+  <script src="/src/services/script.js"></script>
 </body>
 </html>
